// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SystemRecordingPopUp /> Expect to render correctly 1`] = `
<div
  className="simulation-program__overall-respond--score"
>
  <div
    className="simulation-program__overall-score--head"
  >
    <h3
      className="simulation-program__overall-score--heading"
    >
      Overall Score
    </h3>
    <button
      className="inbox-program__close--pop"
      onClick={[Function]}
    >
      x
    </button>
  </div>
  <div
    className="simulation-program__overall-score--info"
  >
    <div
      className="simulation-program__col-sm--3"
      key="maindivtitlevalue1"
    >
      <h4
        className="simulation-program__col--body"
      >
        titlevalue1
      </h4>
      <p
        className="simulation-program__col--p"
        key="contenttitlevalue1"
      />
    </div>
    <div
      className="simulation-program__col-sm--3"
      key="maindivundefined"
    >
      <ul
        className="simulation-program__col--ul"
      >
        <li
          key="sampleundefined"
        >
          value
          .
        </li>
        <li
          key="sampleundefined"
        >
          value1
          .
        </li>
      </ul>
    </div>
    <div
      className="simulation-program__col-sm--3"
      key="maindivtitlevalue2"
    >
      <h4
        className="simulation-program__col--body"
      >
        titlevalue2
      </h4>
      <p
        className="simulation-program__col--p"
        key="contenttitlevalue2"
      >
        value.value1
      </p>
    </div>
    <div
      className="simulation-program__col-sm--3"
      key="maindivtitlevalue3"
    >
      <h4
        className="simulation-program__col--body"
      >
        titlevalue3
      </h4>
      <p
        className="simulation-program__col--p"
        key="contenttitlevalue3"
      >
        value.value1
      </p>
    </div>
  </div>
</div>
`;

exports[`<SystemRecordingPopUp /> Expect to render correctly 2`] = `
<div
  className="simulation-program__overall--score"
>
  <div
    className="simulation-program__overall-score--head"
  >
    <h3
      className="simulation-program__overall-score--heading"
    >
      Overall Score
    </h3>
    <button
      className="inbox-program__close--pop"
      onClick={[Function]}
    >
      x
    </button>
  </div>
  <div
    className="simulation-program__overall-score--info"
  >
    <div
      className="simulation-program__col-sm--4"
      key="maindivtitlevalue1"
    >
      <h4
        className="simulation-program__col--body"
      >
        titlevalue1
      </h4>
      <p
        className="simulation-program__col--p"
        key="contenttitlevalue1"
      >
        value.value1
      </p>
    </div>
    <div
      className="simulation-program__col-sm--4"
      key="maindivtitlevalue2"
    >
      <h4
        className="simulation-program__col--body"
      >
        titlevalue2
      </h4>
      <p
        className="simulation-program__col--p"
        key="contenttitlevalue2"
      >
        khushbu.sinha
      </p>
    </div>
    <div
      className="simulation-program__col-sm--4"
      key="maindivtitlevalue3"
    >
      <h4
        className="simulation-program__col--body"
      >
        titlevalue3
      </h4>
      <p
        className="simulation-program__col--p"
        key="contenttitlevalue3"
      >
        value.value1
      </p>
    </div>
  </div>
</div>
`;

exports[`<SystemRecordingPopUp /> Expect to render correctly 3`] = `
<div
  className="simulation-program__overall-respond--score"
>
  <div
    className="simulation-program__overall-score--head"
  >
    <h3
      className="simulation-program__overall-score--heading"
    >
      Overall Score
    </h3>
    <button
      className="inbox-program__close--pop"
      onClick={[Function]}
    >
      x
    </button>
  </div>
  <div
    className="simulation-program__overall-score--info"
  >
    <div
      className="simulation-program__col-sm--3"
      key="maindivtitlevalue1"
    >
      <h4
        className="simulation-program__col--body"
      >
        titlevalue1
      </h4>
      <p
        className="simulation-program__col--p"
        key="contenttitlevalue1"
      >
        value.value1
      </p>
    </div>
    <div
      className="simulation-program__col-sm--3"
      key="maindivtitlevalue2"
    >
      <h4
        className="simulation-program__col--body"
      >
        titlevalue2
      </h4>
      <p
        className="simulation-program__col--p"
        key="contenttitlevalue2"
      >
        khushbu.sinha
      </p>
    </div>
    <div
      className="simulation-program__col-sm--3"
      key="maindivtitlevalue3"
    >
      <h4
        className="simulation-program__col--body"
      >
        titlevalue3
      </h4>
      <p
        className="simulation-program__col--p"
        key="contenttitlevalue3"
      >
        value.value1
      </p>
    </div>
    <div
      className="simulation-program__col-sm--3"
      key="maindivtitlevalue4"
    >
      <h4
        className="simulation-program__col--body"
      >
        titlevalue4
      </h4>
      <p
        className="simulation-program__col--p"
        key="contenttitlevalue4"
      >
        value.value1
      </p>
    </div>
  </div>
</div>
`;
